tests/NormalTests/paczka1/small_fuzzy/76285201.err
Error in line 1: 9UkChwJi A183 69,1
Error in line 4: A49 A183 54,7
Error in line 13: zKo0cNEC A183 30,3
